--- a/src/App.css
+++ b/src/App.css
@@ -152,3 +152,7 @@ body {
 .lable-style {
     @apply text-[14px] text-richblack-5;
 }
+
+.section_heading {
+    @apply text-2xl font-bold text-richblack-5 lg:text-4xl;
+}
